--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Flask==1.0.2
 gast==0.2.2
 grpcio==1.20.0
 h5py==2.9.0
+git+https://github.com/OlafenwaMoses/ImageAI/releases/download/2.0.2/imageai-2.0.2-py3-none-any.whl
 itsdangerous==1.1.0
 Jinja2==2.10.1
 Keras==2.2.4
