--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cycler==0.10.0
 Flask==1.0.2
 gast==0.2.2
 grpcio==1.20.0
+gunicorn==19.9.0
 h5py==2.9.0
 git+https://github.com/OlafenwaMoses/ImageAI/releases/download/2.0.2/imageai-2.0.2-py3-none-any.whl
 itsdangerous==1.1.0
